kustomize/overlays/dev/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    spec:
      containers:
        - name: nginx
          imagePullPolicy: IfNotPresent
#          volumeMounts:
#            - name: app-volume
#              mountPath: /nginx
#      volumes:
#        - name: app-volume
#          hostPath:
#            path: /host/nginx
#            type: Directory
