kustomize/overlays/dev/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
    application: mlops
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
        - name: backend
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add: ["NET_RAW"]
          volumeMounts:
            - name: app-volume
              mountPath: /app
      volumes:
        - name: app-volume
          hostPath:
            path: /host
            type: Directory
