kustomize/overlays/dev/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-db
spec:
  selector:
    application: mlops
    app: mlops-db
  type: NodePort
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: mlops-db
      application: mlops
  serviceName: mlops-db
  template:
    metadata:
      labels:
        app: mlops-db
        application: mlops
    spec:
      serviceAccountName: postgres
      containers:
        - name: mlops-db
          image: 'postgres:15'
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-pv
      volumes:
        - name: db-pv
          #emptyDir: {}
          persistentVolumeClaim:
            claimName: db-pvc
